# modelcontextprotocol-getweather-example

./: .gitignore  README.md  client.py  pyproject.toml  server.py
tests/: test_client.py  test_server.py
